# LLM-generation

./: .gitignore  README.md  generate.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements-uv.txt  requirements.txt  run.py  run_distributed.py  run_tests.py  run_tests.sh  validate_configs.py
.github/workflows/: tests.yml
config/: config.yaml
config/generation/: default.yaml
config/logging/: wandb.yaml
config/model/: gpt2.yaml  mistral-7b.yaml
config/post_processing/: default.yaml
examples/: custom_post_processing.py  prompts.txt  run_examples.sh
scripts/: fix_missing_deps.sh  generate_lockfile.sh  manage_dependencies.py  setup.sh  setup_pip.sh
src/: __init__.py  generator.py
src/generation/: __init__.py  generator.py
src/logging/: __init__.py  wandb_logger.py
src/models/: __init__.py  base_model.py  model_factory.py  vllm_model.py
src/utils/: __init__.py  config_validator.py  data_utils.py  metrics.py  post_processing.py
test_outputs/: config.yaml
tests/: conftest.py
tests/fixtures/config/generation/: invalid.yaml  valid.yaml
tests/fixtures/config/logging/: invalid.yaml  valid.yaml
tests/fixtures/config/model/: invalid.yaml  valid.yaml
tests/fixtures/config/post_processing/: invalid.yaml  valid.yaml
tests/integration/: test_generator.py
tests/performance/: test_performance.py
tests/unit/: test_config_validator.py  test_metrics.py  test_model_loading.py  test_post_processing.py
